# ransomware

./: CMakeLists.txt  README.md  crypto.c  globals.c  main.c  main.h  network.c  persistence.c  server.py  ui.c  utils.c
